[package]
name = "portfolio"
version = "0.1.0"
authors = ["tom <tomfjones8@gmail.com>"]
edition = "2018"
description = "tom jones portfolio code"
repository = "https://github.com/lostvkng/portfolio-wasm"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Navigator',
  'Clipboard',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true


